RESOLVED FIXED263842
[IFC][Ruby] Multiline annotation content does not get justified after line break
https://bugs.webkit.org/show_bug.cgi?id=263842
Summary [IFC][Ruby] Multiline annotation content does not get justified after line break
alan
Reported 2023-10-28 19:55:35 PDT
ssia
Attachments
Patch (3.44 KB, patch)
2023-10-28 20:00 PDT, alan
no flags
[fast-cq]Patch (4.44 KB, patch)
2023-10-29 06:32 PDT, alan
no flags
alan
Comment 1 2023-10-28 20:00:20 PDT
alan
Comment 2 2023-10-29 06:32:50 PDT
Created attachment 468397 [details] [fast-cq]Patch
EWS
Comment 3 2023-10-29 09:41:24 PDT
Committed 269908@main (553dbacabc63): <https://commits.webkit.org/269908@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468397 [details].
Radar WebKit Bug Importer
Comment 4 2023-10-29 09:42:15 PDT
Note You need to log in before you can comment on or make changes to this bug.