[IFC][Ruby] Multiline annotation content does not get justified after line break https://bugs.webkit.org/show_bug.cgi?id=263842

Reviewed by Antti Koivisto.

Move forced line break check from Line to LineBuilder to be able to force justify annotation box content (also this is where this check should have been the first place).

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::applyRunExpansion):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):

Canonical link: https://commits.webkit.org/269908@main